--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 
 <h1>Wordle</h1>
 
-<div id="grid"></div>
+<div id="screen">
+    <div id="grid"></div>
+    <div id="keyboard"></div>
+</div>
 
 <style>
     body, html {
@@ -10,6 +13,16 @@
         font-family: sans-serif;
         text-align: center;
         text-transform: uppercase;
+    }
+
+    body, html , #screen {
+        height: 100%;
+        width: 100%;
+    }
+
+    #screen {
+        display: flex;
+        flex-direction: column;
     }
 
     h1 {
@@ -26,6 +39,25 @@
         margin: 10px;
         font-size: 40px;
         font-weight: bold;
+    }
+
+    #grid {
+        flex: 1 1 auto
+    }
+
+    .button {
+        text-transform: uppercase;
+        padding: 15px;
+        border-radius: 5px;
+        margin:3px;
+        border: none;
+        font-size: 16px;
+        color: white;
+    }
+
+    #keyboard {
+        flex: none;
+        padding: 20px;
     }
 
 </style>
