--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         width : 60px;
         height : 60px;
         line-height: 60px;
-        border : 1px solid #aaa;
-        padding: 20px;
+        border : 1px solid #444;
+        padding: 6px;
         display: inline-block;
-        margin: 10px;
+        margin: 3px;
         font-size: 40px;
         font-weight: bold;
     }
