add animation on typing

--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
         padding: 20px;
     }
 
+    @keyframes press {
+        from{
+            opacity: 0.5;
+            transform: scale(0.95);
+        }
+        50% {
+            opacity: 0.85;
+            transform: scale(1.1);
+        }
+        to{
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+
 </style>
 
 <script src="index.js"></script>
