--- a/index.html
+++ b/index.html
@@ -33,12 +33,30 @@
         width : 60px;
         height : 60px;
         line-height: 60px;
-        border : 1px solid #444;
         padding: 6px;
         display: inline-block;
         margin: 3px;
         font-size: 40px;
         font-weight: bold;
+    }
+
+    .cell > .front, .cell > .back {
+        border : 2px solid #444;
+    }
+
+    .cell > .front {
+        display: block;
+    }
+
+    .cell > .back {
+        display: none;
+    }
+
+    .cell.solved > .back {
+        display: block;
+    }
+    .cell.solved > .front {
+        display: none;
     }
 
     #grid {
