--- a/index.html
+++ b/index.html
@@ -38,12 +38,24 @@
         margin: 3px;
         font-size: 40px;
         font-weight: bold;
-        position: relative;
+        perspective: 1000px;
     }
 
-    .cell > .front, .cell > .back {
+    .cell.solved .surface{
+        transform: rotateX(180deg);
+    }
+
+    .cell .surface {
+        transition-duration: 800ms;
+        transform-style: preserve-3d;
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+
+    .cell .front, .cell .back {
         border : 2px solid #444;
-        transition: opacity 1s linear;
+        backface-visibility: hidden;
         position: absolute;
         top: 0;
         left: 0;
@@ -51,20 +63,21 @@
         right: 0;
     }
 
-    .cell > .front {
-        opacity: 1;
+    .cell .front {
+        z-index: 2;
     }
 
-    .cell > .back {
-        opacity: 0;
+    .cell .back {
+        z-index: 1;
+        transform: rotateX(180deg);
     }
 
-    .cell.solved > .back {
+    /* .cell.solved .back {
         opacity: 1;
     }
-    .cell.solved > .front {
+    .cell.solved .front {
         opacity: 0;
-    }
+    } */
 
     #grid {
         flex: 1 1 auto
